@@ -3,6 +3,15 @@
 	* tp/Texinfo/Convert/XSParagraph/configure.ac (AC_CONFIG_HEADERS),
 	tp/Texinfo/Convert/XSParagraph/XSParagraph.xs,
 	tp/Texinfo/Convert/XSParagraph/text.c,
+	tp/Texinfo/Convert/XSParagraph/xspara.c:
+	revert to using config.h, as gnulib requires the header file
+	to be called config.h.
+
+2015-08-25  Patrice Dumas  <pertusus@free.fr>
+
+	* tp/Texinfo/Convert/XSParagraph/configure.ac (AC_CONFIG_HEADERS),
+	tp/Texinfo/Convert/XSParagraph/XSParagraph.xs,
+	tp/Texinfo/Convert/XSParagraph/text.c,
 	tp/Texinfo/Convert/XSParagraph/xspara.c: 
 	Use xsparagraph_acconfig.h instead of config.h as the name for the
 	header file generated by configure as an additional security against 
